WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60619
<input pattern="1|10" value="10"> doesn't work correctly.
https://bugs.webkit.org/show_bug.cgi?id=60619
Summary
<input pattern="1|10" value="10"> doesn't work correctly.
Kent Tamura
Reported
2011-05-11 03:49:45 PDT
<input pattern="1|10" value="10"> doesn't work correctly.
Attachments
Patch
(6.18 KB, patch)
2011-05-11 03:52 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2011-05-11 03:52:41 PDT
Created
attachment 93102
[details]
Patch
WebKit Commit Bot
Comment 2
2011-05-11 17:40:03 PDT
Comment on
attachment 93102
[details]
Patch Clearing flags on attachment: 93102 Committed
r86292
: <
http://trac.webkit.org/changeset/86292
>
WebKit Commit Bot
Comment 3
2011-05-11 17:40:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug